--- a/app/src/main/res/layout/item_reserva.xml
+++ b/app/src/main/res/layout/item_reserva.xml
@@ -53,5 +53,16 @@
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             android:textColor="@color/black"/>
+        <Button
+            android:id="@+id/btnCancelarReserva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancelar"
+            android:layout_marginTop="8dp"
+            android:padding="6dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/rojo"
+             />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
