--- a/app/src/main/res/layout/activity_solicitud_reservas_equipo.xml
+++ b/app/src/main/res/layout/activity_solicitud_reservas_equipo.xml
@@ -115,6 +115,23 @@
         android:textColor="@color/white" />
 
     <TextView
+        android:id="@+id/tvSeleccionDia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tu selección: (ninguna)"
+        android:textStyle="italic"
+        android:layout_marginTop="4dp"/>
+
+    <!-- Visible solo para admin -->
+    <TextView
+        android:id="@+id/tvReservasAdmin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="@android:color/holo_blue_dark"
+        android:layout_marginTop="8dp"/>
+
+    <TextView
         android:id="@+id/tvFechaSeleccionada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
