--- a/app/src/main/res/layout/item_reserva.xml
+++ b/app/src/main/res/layout/item_reserva.xml
@@ -23,7 +23,7 @@
             android:id="@+id/tvNombreAmbiente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ambiente:"
+            android:text=""
             android:textStyle="bold"
             android:layout_marginTop="6dp"
             android:textColor="@color/black"/>
